RESOLVED FIXED170815
Fix CMake build
https://bugs.webkit.org/show_bug.cgi?id=170815
Summary Fix CMake build
Alex Christensen
Reported 2017-04-13 11:33:04 PDT
Fix CMake build
Attachments
Patch (3.82 KB, patch)
2017-04-13 11:34 PDT, Alex Christensen
bdakin: review+
Alex Christensen
Comment 1 2017-04-13 11:34:04 PDT
Beth Dakin
Comment 2 2017-04-13 11:35:43 PDT
Comment on attachment 307001 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=307001&action=review I'm guessing this is fixing multiple build fixes? > Source/WebCore/PlatformMac.cmake:-266 > - loader/cf/SubresourceLoaderCF.cpp Is this also needed? > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:-761 > - return NO; Same, is this also needed?
Alex Christensen
Comment 3 2017-04-13 11:51:41 PDT
Yep, they're both needed. They solve different problems that also prevent the CMake build from working.
Note You need to log in before you can comment on or make changes to this bug.