Fix CMake build https://bugs.webkit.org/show_bug.cgi?id=170815

Reviewed by Beth Dakin.

Source/WebCore:

* platform/spi/cocoa/AVKitSPI.h:

Source/WebKit2:

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration _setShouldCaptureAudioInUIProcess:]):



Canonical link: https://commits.webkit.org/187747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215329 268f45cc-cd09-0410-ab3c-d52691b4dbfc